--- a/static/css/password_reset.css
+++ b/static/css/password_reset.css
@@ -1,81 +1,14 @@
-.heading{
-    margin-bottom:70px;
-}
-
-h1{
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 36px;
-    color: #4A4A4A;
-}
-
-
-input{
-    width: 490px;
-    height: 50px;
-    background: #F2F2F2;
-    border-radius: 10px;
-    border:none;
-}
-.submit{
-    width: 306px;
-    height: 55px;
-    background: #FB8F1D;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-    border:none;
-
-
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 24px;
-    text-align: center;
-
-    color: #FFFFFF;
-}
-
 .button{
-    margin-top:50px;
+    margin-top:3em;
     text-align: center;
 }
 
 .small_description{
-    margin-top:15px;
-
-    font-family: Inter;
-    font-style: normal;
+    margin-top:1em;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 1.1rem;
     text-align: center;
-
     color: #797979;
-}
-
-form input::placeholder{
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
-    /* identical to box height */
-
-
-    color: #9C9C9C;
-}
-
-form input{
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
-    padding-left: 20px;
-}
-
-form input:focus{
-    outline: none;
 }
 
 .modal_wrap{
@@ -91,53 +24,31 @@ form input:focus{
 
 .modal_content{
     position: relative;
-    width: 852px;
-    height: 545px;
+    width: 53em;
+    height: 34em;
     background: #FFFFFF;
-    box-shadow: 8px 10px 100px rgba(0, 0, 0, 0.25);
-    border-radius: 30px;
-}
-
-.modal_content >.heading{
-    width: 510px;
-    margin:100px auto 50px;
-}
-
-.center{
-    text-align: center;
-}
-
-
-
-.modal_content >form{
-    width: 490px;
-    margin:0 auto;
-}
-
-form label{
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 22px;
-
-    color: #5C5C5C;
+    box-shadow: 0.5em 0.625rem 6.25rem rgba(0, 0, 0, 0.25);
+    border-radius: 2rem;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .close_btn{
-    font-family: Inter;
-    font-style: normal;
+    align-self: flex-end;
     font-weight: 600;
-    font-size: 35px;
+    font-size: 2.1rem;
     float:right;
     color: #C6C6C6;
     background-color: white;
     border:none;
-    margin-top:20px;
-    margin-right:25px;
+    margin:1rem;
 }
 
-.close_btn:focus{
-    outline:none;
+.modal_content h1{
+    width:100%;
+    text-align:center;
+    padding-bottom:0.5rem;
 }
 
 .modal_overlay{
@@ -145,4 +56,17 @@ form label{
     height:100%;
     background: rgba(196, 196, 196, 0.31);
     position:absolute;
+}
+
+.modal_content label{
+    font-weight: 600;
+    font-size:1.25rem;
+}
+.modal_content input{
+    width:30.625rem;
+    display: block;
+}
+
+form{
+    margin-top:2rem;
 }
