--- a/templates/user/my_page_header.html
+++ b/templates/user/my_page_header.html
@@ -1,7 +1,4 @@
-<h2>
-    마이페이지
-    <hr>
-</h2>
+<h1>마이페이지<hr></h1>
 <div class="my_page_header">
     <a id="active1" href="{% url 'user:my_posts' %}">
         게시물 관리
