--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,7 +1,26 @@
 /* 기본 글꼴, 기본 글자색 */
-*{
+:root{
+    --text-color:#484848;
+    --brand-color:#FB8F1D;
+}
+
+
+html{
     font-family: Inter;
-    color: #484848;
+    color: var(--text-color);
+}
+
+a{
+    text-decoration:none;
+    white-space:nowrap;
+}
+
+a:hover{
+    text-decoration:none;
+}
+
+li{
+    list-style:none;
 }
 
 /* ------------------------------------------- */
@@ -48,7 +67,7 @@ input:focus{
 }
 
 .submit_btn{
-    background: #FB8F1D;
+    background: var(--brand-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
     border:none;
@@ -61,7 +80,43 @@ input:focus{
 }
 
 /* ------------------------------------------- */
+/* --------------마이페이지------------------- */
+
+.mypage_content{
+    width:64rem;
+    margin: 3rem auto;
+}
+
+.my_page_header{
+    margin: 3rem 0;
+}
+
+.my_page_header h1{
+    text-align:left;
+}
+
+.my_page_header a{
+    width:20rem;
+    display: inline-block;
+    text-align: center;
+    font-weight: 500;
+    font-size: 1.8rem;
+    color: #757575;
+}
+
+
+/* ------------------------------------------- */
+
 header{
     height: 9em;
     display: flex;   
+}
+
+
+@media screen and (max-width:1600px){
+    html{
+        font-family: Inter;
+        color: var(--text-color);
+        font-size:0.8em;
+    }
 }
