--- a/static/css/change_account_info.css
+++ b/static/css/change_account_info.css
@@ -1,65 +1,25 @@
-.content{
-    width:1011px;
-    margin: 50px auto;
-}
-
-h2{
-    margin-left:100px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 36px;
-    color: #4A4A4A;
-}
-h2>hr{
-    margin-left:0;
-    width: 40px;
-    height: 2.5px;
-    background: #4A4A4A;
-    border-radius: 4px;
-}
-
-.my_page_header{
-    margin: 50px 0;
-}
-.my_page_header a{
-    width:334px;
-    display: inline-block;
-    text-align: center;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 30px;
-    text-decoration: none;
-    color: #757575;
-}
 
 #active3{
     font-weight:600;
 
 }
 #active3>hr{
-    height: 2.5px;
+    height: 0.08em;
     background-color: #757575;
 }
 
-.content .change{
-    display:block;
-    margin: 50px auto;
-    width: 306px;
-    height: 55px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 24px;
-    align-items: center;
-    text-align: center;
-    line-height: 55px;
-    text-decoration: none;
-    color: #FFFFFF;
-
-    background: #FB8F1D;
+.mypage_content .change{
+    display: block;
+    margin:2em auto;
+    line-height:3.5rem;
+    background: var(--brand-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
+    border-radius: 1rem;
     border:none;
+    font-weight: 600;
+    font-size: 1.5rem;
+    text-align: center;
+    color: #FFFFFF;
+    width:12.75em;
+    height: 2.3em;
 }
