--- a/static/css/change_major.css
+++ b/static/css/change_major.css
@@ -1,164 +1,56 @@
-.content{
-    width:1011px;
-    margin: 50px auto;
-}
-
-h2{
-    margin-left:100px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 36px;
-    color: #4A4A4A;
-}
-h2>hr{
-    margin-left:0;
-    width: 40px;
-    height: 2.5px;
-    background: #4A4A4A;
-    border-radius: 4px;
-}
-
-.my_page_header{
-    margin: 50px 0;
-}
-.my_page_header a{
-    width:334px;
-    display: inline-block;
-    text-align: center;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 30px;
-    text-decoration: none;
-    color: #757575;
-}
-
 #active2{
     font-weight:600;
 
 }
 #active2>hr{
-    height: 2.5px;
+    height: 0.08em;
     background-color: #757575;
 }
 
-form p{
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
 
-    color: #515050;
-}
-
-
-.form-group .full{
-    width: 100%;
-    height: 50px;
-    background: #F2F2F2;
-    border-radius: 10px;
-}
-
-.major_col1{
+.major_col1 {
     display: inline-block;
-    float:left;
-    width:375px;
-    margin-right:20px;
+    float: left;
+    width: 23rem;
 }
 
-.major_col2{
+.major_col2 {
     display: inline-block;
-    float:right;
-    width:375px;
+    float: right;
+    width: 23rem;
 }
-
-select{
-    width: 360px;
-    height: 50px;
-    border: 1px solid #AFB0B9;
+select {
+    width: 22rem;
+    height: 3.125rem;
     box-sizing: border-box;
     border-radius: 6px;
-
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 32px;
-    /* or 160% */
-
-
+    font-size: 1.25rem;
+    padding-left: 1.5em;
     color: #4A4C53;
 }
-
-
-form button{
-    display:block;
-    margin: 50px auto;
-    width: 306px;
-    height: 55px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 24px;
-    align-items: center;
-    text-align: center;
-
-    color: #FFFFFF;
-
-    background: #FB8F1D;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-    border:none;
-}
-
-
-label{
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 22px;
-    line-height: 27px;
-
-    color: #5C5C5C;
-}
-
-input:focus{
-    outline: none;
-}
-
-input{
-    border:none;
-}
-
 
 .first_major{
     border: 1px solid #FC8C15;
 }
 
 .major_col1>p{
-    margin:3px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    line-height: 19px;
-
+    margin:0.25em;
     color: #FC8C15;
-}
-
-
-form input{
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
-    padding-left: 20px;
 }
 
 .major{
     overflow:hidden;
     width:fit-content;
     margin:0 auto;
+}
+
+.submit_btn{
+    margin: 2rem auto;
+    display:block;
+}
+
+label{
+    font-weight: 600;
+    font-size:1.25rem;
+    color: #4A4C53;
 }
