--- a/static/css/change_pwd_username.css
+++ b/static/css/change_pwd_username.css
@@ -1,41 +1,9 @@
-.content{
-    width:1011px;
-    margin: 50px auto;
-}
-
-h2{
-    margin-left:100px;
-    font-weight: 600;
-    font-size: 36px;
-    color: #4A4A4A;
-}
-h2>hr{
-    margin-left:0;
-    width: 40px;
-    height: 2.5px;
-    background: #4A4A4A;
-    border-radius: 4px;
-}
-
-.my_page_header{
-    margin: 50px 0;
-}
-.my_page_header a{
-    width:334px;
-    display: inline-block;
-    text-align: center;
-    font-weight: 500;
-    font-size: 30px;
-    text-decoration: none;
-    color: #757575;
-}
-
 #active3{
     font-weight:600;
 
 }
 #active3>hr{
-    height: 2.5px;
+    height: 0.08em;
     background-color: #757575;
 }
 
@@ -44,24 +12,7 @@ form{
     margin:0 auto;
 }
 
-
-.content input{
-    width: 100%;
-    height: 50px;
-    border:none;
-    background: #F2F2F2;
-    border-radius: 10px;
-
-    font-weight: 600;
-    font-size: 20px;
-    padding-left: 20px;
-}
-
-.content input:focus{
-    outline: none;
-}
-
-.content label{
+.mypage_content label{
     display:block;
     font-weight: 600;
     font-size: 22px;
@@ -69,27 +20,7 @@ form{
     color: #5C5C5C;
 }
 
-form button{
+.submit_btn{
     display:block;
-    margin: 50px auto;
-    width: 306px;
-    height: 55px;
-    font-weight: 600;
-    font-size: 24px;
-    align-items: center;
-    text-align: center;
-
-    color: #FFFFFF;
-
-    background: #FB8F1D;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
-    border:none;
+    margin:3rem auto;
 }
-h3{
-    font-weight: 600;
-    font-size: 36px;
-    color: #4A4A4A;
-    margin-bottom: 80px;
-}
-
