--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -174,10 +174,16 @@ label {
 
 .terms_of_service{
     position: relative;
+    
 }
 
 .terms_of_service>p{
     text-align: center;
+}
+
+#terms_of_service{
+    width:100%;
+    height:20em;
 }
 
 /* ---------------Custom checkbox ---------------*/
@@ -250,4 +256,8 @@ label {
 .button{
     width:fit-content;
     margin:0 auto;
+}
+
+.title{
+    display: block;
 }
