--- a/templates/user/change_account_info.html
+++ b/templates/user/change_account_info.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/change_account_info.css' %}">
 {% endblock %}
 {% block content %}
-<div class="content">
+<div class="mypage_content">
     {% include 'user/my_page_header.html'%}
     <a class="change" href="{% url 'user:change_username' %}">닉네임 변경</a>
     <a class="change" href="{% url 'user:change_pwd' %}">비밀번호 변경</a>
