--- a/templates/user/change_username.html
+++ b/templates/user/change_username.html
@@ -4,14 +4,14 @@
 <link rel="stylesheet" type="text/css" href="{% static 'css/change_pwd_username.css' %}">
 {% endblock %}
 {% block content %}
-<div class="content">
+<div class="mypage_content">
     {% include 'user/my_page_header.html'%}
     <form method="post" class="post-form" action="{% url 'user:change_username' %}">
         {% csrf_token %}
         {% include "form_errors.html" %}
         <label for="username">닉네임</label>
         <input type="text" name="username" id="username" value = "{{form.username.value}}">
-        <button type="submit" class="">변경하기</button>
+        <button class="submit_btn" type="submit" class="">변경하기</button>
     </form>
 </div>
 {% if message %}
