--- a/templates/user/my_posts.html
+++ b/templates/user/my_posts.html
@@ -5,7 +5,7 @@
 {% endblock %}
 {% block content %}
 
-<div class="content">
+<div class="mypage_content">
     {% include 'user/my_page_header.html'%}
 </div>
 <div class="posts">
