--- a/templates/user/password_reset.html
+++ b/templates/user/password_reset.html
@@ -7,22 +7,21 @@
 
 {% block content %}
 <div class="modal_wrap">
-    <div class="modal_overlay" onclick ="goBack()"></div>
+    <div class="modal_overlay" onclick="goBack()"></div>
     <div class="modal_content">
-        <button class="close_btn" onclick ="goBack()">X</button>
-        <div class="heading">
-            <h1 class="center">비밀번호 찾기</h1>
-            <p class="small_description">가입에 사용하신 이메일로 비밀번호 변경링크를 전송해드립니다</p>
-        </div>
+        <button class="close_btn" onclick="goBack()">X</button>
+        <h1 class="center">비밀번호 찾기</h1>
+        <p class="small_description">가입에 사용하신 이메일로 비밀번호 변경링크를 전송해드립니다</p>
         <form method="post" action="{% url 'password_reset' %}">
             {% csrf_token %}
             {% include "form_errors.html" %}
             <div class="email">
                 <label for="email">이메일</label>
-                <input type="text" placeholder="학교 이메일" name="email" id="email" value="{{form.email.value|default_if_none:''}}">
+                <input type="text" placeholder="학교 이메일" name="email" id="email"
+                    value="{{form.email.value|default_if_none:''}}">
             </div>
             <div class="button">
-                <button class="submit" type="submit">비밀번호 찾기</button>
+                <button class="submit_btn" type="submit">비밀번호 찾기</button>
             </div>
         </form>
     </div>
