--- a/templates/user/signup.html
+++ b/templates/user/signup.html
@@ -357,14 +357,15 @@
 
         <div class="terms_of_service">
             <label class="title" for="terms_of_service">이용약관</label>
-            <textarea name="terms_of_service" id="terms_of_service" cols="79" rows="10" disabled="true">('ww.booku.me'이하 'BooKU')은(는) 개인정보보호법에 따라 이용자의 개인정보 보호 및 권익을 보호하고 개인정보와 관련한 이용자의 고충을 원활하게 처리할 수 있도록 다음과 같은 처리방침을 두고 있습니다.
+            <textarea name="terms_of_service" id="terms_of_service" disabled>
+('http://www.booku.club/'이하 'BooKU')은(는) 개인정보보호법에 따라 이용자의 개인정보 보호 및 권익을 보호하고 개인정보와 관련한 이용자의 고충을 원활하게 처리할 수 있도록 다음과 같은 처리방침을 두고 있습니다.
 
 ('BooKU') 은(는) 회사는 개인정보처리방침을 개정하는 경우 웹사이트 공지사항(또는 개별공지)을 통하여 공지할 것입니다.
 
-○ 본 방침은부터 2020년 1월 17일부터 시행됩니다.
+○ 본 방침은부터 2020년 12월 31일부터 시행됩니다.
 
 
-1. 개인정보의 처리 목적 ('ww.booku.me'이하 'BooKU')은(는) 개인정보를 다음의 목적을 위해 처리합니다. 처리한 개인정보는 다음의 목적이외의 용도로는 사용되지 않으며 이용 목적이 변경될 시에는 사전동의를 구할 예정입니다.
+1. 개인정보의 처리 목적 ('http://www.booku.club/'이하 'BooKU')은(는) 개인정보를 다음의 목적을 위해 처리합니다. 처리한 개인정보는 다음의 목적이외의 용도로는 사용되지 않으며 이용 목적이 변경될 시에는 사전동의를 구할 예정입니다.
 
 가. 홈페이지 회원가입 및 관리
 
@@ -373,7 +374,7 @@
 
 나. 민원사무 처리
 
-민원인의 신원 확인 등을 목적으로 개인정보를 처리합니다.
+민원인의 신원 확인, 민원사항 확인, 사실조사를 위한 연락·통지, 처리결과 통보 등을 목적으로 개인정보를 처리합니다.
 
 
 다. 재화 또는 서비스 제공
@@ -387,16 +388,13 @@
 
 
 2. 개인정보 파일 현황
-('ww.booku.me'이하 'BooKU')가 개인정보 보호법 제32조에 따라 등록․공개하는 개인정보파일의 처리목적은 다음과 같습니다.
 
 1. 개인정보 파일명 : BooKU 개인정보
-개인정보 항목 : 이메일, 휴대전화번호, 비밀번호, 로그인ID, 성별, 생년월일, 이름, 서비스 이용 기록, 접속 로그, 쿠키, 소속 대학 및 학과 정보
+개인정보 항목 : 이메일, 비밀번호, 로그인ID, 성별, 생년월일, 학력, 서비스 이용 기록, 접속 로그, 쿠키, 접속 IP 정보, 소속 대학 및 학과
 수집방법 : 홈페이지
 보유근거 : 소속 대학 및 학과 기반 맞춤 서비스 제공
 보유기간 : 3년
-관련법령 : 신용정보의 수집/처리 및 이용 등에 관한 기록 : 3년
-※ 기타('ww.booku.me'이하 'BooKU')의 개인정보파일 등록사항 공개는 개인정보보호위원회 개인정보보호 종합지원 포털(www.privacy.go.kr) → 개인정보민원 → 개인정보열람등 요구 → 개인정보파일 목록검색 메뉴를 활용해주시기 바랍니다.
-
+관련법령 : 소비자의 불만 또는 분쟁처리에 관한 기록 : 3년
 
 
 3. 개인정보의 처리 및 보유 기간
@@ -407,17 +405,16 @@
 
 1.<홈페이지 회원가입 및 관리>
 <홈페이지 회원가입 및 관리>와 관련한 개인정보는 수집.이용에 관한 동의일로부터<3년>까지 위 이용목적을 위하여 보유.이용됩니다.
-보유근거 : 서비스 제공
-관련법령 : 1)신용정보의 수집/처리 및 이용 등에 관한 기록 : 3년
-2) 소비자의 불만 또는 분쟁처리에 관한 기록 : 3년
+보유근거 : 소속 대학 및 학과 기반 맞춤 서비스 제공
+관련법령 : 소비자의 불만 또는 분쟁처리에 관한 기록 : 3년
 예외사유 :
 
 
 4. 개인정보의 제3자 제공에 관한 사항
 
-① ('ww.booku.me'이하 'BooKU')은(는) 정보주체의 동의, 법률의 특별한 규정 등 개인정보 보호법 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.
+① ('http://www.booku.club/'이하 'BooKU')은(는) 정보주체의 동의, 법률의 특별한 규정 등 개인정보 보호법 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다.
 
-② ('ww.booku.me')은(는) 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.
+② ('http://www.booku.club/')은(는) 다음과 같이 개인정보를 제3자에게 제공하고 있습니다.
 
 1. <>
 개인정보를 제공받는 자 :
@@ -433,7 +430,7 @@
 위탁받는 자 (수탁자) :
 위탁하는 업무의 내용 :
 위탁기간 :
-② ('ww.booku.me'이하 'BooKU')은(는) 위탁계약 체결시 개인정보 보호법 제25조에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적․관리적 보호조치, 재위탁 제한, 수탁자에 대한 관리․감독, 손해배상 등 책임에 관한 사항을 계약서 등 문서에 명시하고, 수탁자가 개인정보를 안전하게 처리하는지를 감독하고 있습니다.
+② ('http://www.booku.club/'이하 'BooKU')은(는) 위탁계약 체결시 개인정보 보호법 제25조에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적․관리적 보호조치, 재위탁 제한, 수탁자에 대한 관리․감독, 손해배상 등 책임에 관한 사항을 계약서 등 문서에 명시하고, 수탁자가 개인정보를 안전하게 처리하는지를 감독하고 있습니다.
 
 ③ 위탁업무의 내용이나 수탁자가 변경될 경우에는 지체없이 본 개인정보 처리방침을 통하여 공개하도록 하겠습니다.
 
@@ -455,10 +452,10 @@
 
 7. 처리하는 개인정보의 항목 작성
 
-① ('ww.booku.me'이하 'BooKU')은(는) 다음의 개인정보 항목을 처리하고 있습니다.
+① ('http://www.booku.club/'이하 'BooKU')은(는) 다음의 개인정보 항목을 처리하고 있습니다.
 
-1<홈페이지 회원가입 및 관리>
-필수항목 : 이메일, 휴대전화번호, 비밀번호, 로그인ID, 성별, 생년월일, 이름, 학력, 서비스 이용 기록, 접속 로그, 쿠키, 소속 대학 및 학과 정보
+1<제화 또는 서비스 제공>
+필수항목 : 이메일, 성별, 생년월일, 학력, 소속 대학 및 학과 정보
 - 선택항목 :
 
 
@@ -470,6 +467,10 @@
 -파기기한
 이용자의 개인정보는 개인정보의 보유기간이 경과된 경우에는 보유기간의 종료일로부터 5일 이내에, 개인정보의 처리 목적 달성, 해당 서비스의 폐지, 사업의 종료 등 그 개인정보가 불필요하게 되었을 때에는 개인정보의 처리가 불필요한 것으로 인정되는 날로부터 5일 이내에 그 개인정보를 파기합니다.
 
+-파기방법
+
+전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다
+
 
 
 9. 개인정보 자동 수집 장치의 설치•운영 및 거부에 관한 사항
@@ -478,20 +479,20 @@
 
 10. 개인정보 보호책임자 작성
 
-① BooKU(‘ww.booku.me’이하 ‘BooKU) 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.
+① BooKU(‘http://www.booku.club/’이하 ‘BooKU) 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.
 
 ▶ 개인정보 보호책임자
 성명 :BooKU
-직책 :미정
-직급 :미정
-연락처 :미정, 미정, 미정
+직책 :admin
+직급 :admin
+연락처 :01000000000, booku@outlook.kr,
 ※ 개인정보 보호 담당부서로 연결됩니다.
 
 ▶ 개인정보 보호 담당부서
 부서명 :
 담당자 :
 연락처 :, ,
-② 정보주체께서는 BooKU(‘ww.booku.me’이하 ‘BooKU) 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. BooKU(‘ww.booku.me’이하 ‘BooKU) 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.
+② 정보주체께서는 BooKU(‘http://www.booku.club/’이하 ‘BooKU) 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. BooKU(‘http://www.booku.club/’이하 ‘BooKU) 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.
 
 11. 개인정보 처리방침 변경
 
@@ -513,15 +514,11 @@
 4. 개인정보의 암호화
 이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다.
 
-5. 개인정보에 대한 접근 제한
+5. 접속기록의 보관 및 위변조 방지
+개인정보처리시스템에 접속한 기록을 최소 6개월 이상 보관, 관리하고 있으며, 접속 기록이 위변조 및 도난, 분실되지 않도록 보안기능 사용하고 있습니다.
+
+6. 개인정보에 대한 접근 제한
 개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다.
-
-6. 문서보안을 위한 잠금장치 사용
-개인정보가 포함된 서류, 보조저장매체 등을 잠금장치가 있는 안전한 장소에 보관하고 있습니다.
-
-7. 비인가자에 대한 출입 통제
-개인정보를 보관하고 있는 물리적 보관 장소를 별도로 두고 이에 대해 출입통제 절차를 수립, 운영하고 있습니다.
-
             </textarea>
             <p>
                 <label for="agree" class="checkbox_container">모든 약관을 확인했으며, 이에 동의합니다.
