--- a/static/css/notice_detail.css
+++ b/static/css/notice_detail.css
@@ -4,7 +4,7 @@
     color: #EA9241;
 }
 
-.heading{
+.header{
     margin-top:2em;
     position:relative;
     height:3em;
@@ -33,10 +33,9 @@
     vertical-align: bottom;
 }
 
-.content>p{
-    font-weight: 500;
-    letter-spacing: 0em;
-    line-height: 2em;
+.content{
+   
+   white-space: pre-wrap;
 }
 
 .info{
@@ -50,3 +49,4 @@
 .line2{
     border: 2px solid #E0E0E0;
 }
+
