--- a/static/css/book_detail.css
+++ b/static/css/book_detail.css
@@ -1,31 +1,31 @@
 .medium-box{
     position: absolute;
-    width: 1920px;
-    height: 60px;
+    width: 100%;
+    height: 3.75rem;
     left: 0px;
     top: 310px;
-    border:1px solid #FF9F46;
+    border: 0.0625rem solid #FF9F46;
     background: #FF9F46;
     font-family: Inter;
     font-style: normal;
     font-weight: bold;
-    font-size: 24px;
-    line-height: 29px;
+    font-size: 1.5rem;
+    line-height: 1.813rem;
     color: #FFFFFF;
     text-align: center;
-    line-height: 60px;
+    line-height: 3.75rem;
 }
 .book_detail_image{
     position: absolute;
-    width: 490px;
-    height: 490px;
+    width: 30.63rem;
+    height: 30.63rem;
     left: 383px;
     top: 440px;
 }
 .book_detail_line{
-    width: 550px;
-    height: 0px;
-    border: 1px solid #A8A8A8;
+    width: 34.38rem;
+    height: 0rem;
+    border: 0.0625rem solid #A8A8A8;
 }
 .all_detail{
     position: absolute;
@@ -37,53 +37,21 @@
 }
 .book_writer_date{
     position: absolute;
-    width: 206px;
-    height: 65px;
+    width: 12.88rem;
+    height: 4.063rem;
     left: 330px;
     top: 40px;
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
-    font-size: 14px;
-    line-height: 24px;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
     text-align: right;
     color: #484848;
 }
-/*
-input[type='radio'],
-input[type='radio']:checked {
-  appearance: none;
-  width: 28px;
-  height: 28px;
-  border-radius: 100%;
-  margin-right: 50px;
-}
-input[type='radio'] {
-  background-color: #FFFFFF;
-  border: 3px solid #FF8301;
-}
-input[type='radio']:checked {
-  background-color:  #FF8301;
-  border:none
-}
-.radio_label{
-    position: absolute;
-    left: 19px;
-    top: 310px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 16px;
-    text-align: center;
-    color: #7A7A7A;
-    word-spacing: 56px;
-}
-.radio_label.indent{
-    padding-right:100px;
-}*/
 .all_radio{
-    padding-left:15px;
-    padding-top:20px;
+    padding-left: 0.9375rem;
+    padding-top:1.25rem;
 }
 .btn_state{
     border: 0;
@@ -106,11 +74,11 @@ input:focus {
     position: absolute;
     top: 50%;
     left: 15%;
-    width: 299px;
-    height: 115px;
-    padding: 16px;
-    border: 0px solid black;
-    box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.25);
+    width: 18.69rem;
+    height: 7.188rem;
+    padding: 1rem;
+    border: 0rem solid black;
+    box-shadow: 0rem 0rem  1.25rem 0.125rem rgba(0, 0, 0, 0.25);
     background-color: white;
     z-index:1002;
     overflow: auto;
@@ -118,19 +86,19 @@ input:focus {
 .state_box_txt{
     font-style: normal;
     font-weight: normal;
-    font-size: 12px;
+    font-size: 0.75rem;
 }
 .deal_text{
     position: absolute;
-    width: 377.71px;
-    height: 35px;
+    width: 23.56rem;
+    height: 2.188rem;
     left: -480px;
     top: 500px;
     font-family: NanumGothic;
     font-style: normal;
     font-weight: bold;
-    font-size: 20px;
-    line-height: 35px;
+    font-size: 1.25rem;
+    line-height: 2.188rem;
     /* identical to box height, or 146% */
     display: flex;
     align-items: center;
@@ -139,18 +107,18 @@ input:focus {
 }
 .btn_deal{
     position: absolute;
-    width: 490px;
-    height: 45px;
+    width: 30.63rem;
+    height: 2.813rem;
     left: -620px;
     top: 540px;
     background: #FF8C38;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 20px;
+    box-shadow: 0rem  0.25rem  0.25rem rgba(0, 0, 0, 0.25);
+    border-radius: 1.25rem;
     font-family: NanumGothic;
     font-style: normal;
     font-weight: bold;
-    font-size: 20px;
-    line-height: 35px;
+    font-size: 1.25rem;
+    line-height: 2.188rem;
     /* identical to box height, or 146% */
     text-align: center;
     color: #FFFFFF;
@@ -165,13 +133,13 @@ input:focus {
 }
 .btn{
     background: #FF8C38;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
     border-radius: 20px;
     font-family: NanumGothic;
     font-style: normal;
     font-weight: bold;
-    font-size: 20px;
-    line-height: 35px;
+    font-size:  1.25rem;
+    line-height: 2.188rem;
     /* identical to box height, or 146% */
     text-align: center;
     color: #FFFFFF;
@@ -184,7 +152,7 @@ input:focus {
     display: inline-block;
     position: relative;
     cursor: pointer;
-    font-size: 22px;
+    font-size: 1.375rem;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -192,7 +160,7 @@ input:focus {
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
+    font-size: 1rem;
     text-align: center;
     color: #7A7A7A;
 }
@@ -207,8 +175,8 @@ input:focus {
 .checkmark {
     display: block;
     background-color: white;
-    height: 40px;
-    width: 40px;
+    height: 2.5rem;
+    width: 2.5rem;
     border-radius: 50%;
     z-index: 10;
 }
@@ -233,32 +201,32 @@ input:focus {
 }
 
 .gradation1 {
-    border:solid #945AA9 6px;
+    border:solid #945AA9 0.375rem;
 }
 
 .gradation2 {
-    border:solid #AA6287 6px;
+    border:solid #AA6287 0.375rem;
 }
 
 .gradation3 {
-    border:solid #CC6F51 6px;
+    border:solid #CC6F51 0.375rem;
 }
 
 .gradation4 {
-    border:solid #FF8301 6px;
+    border:solid #FF8301 0.375rem;
 }
 
 .gradation_line{
     background: linear-gradient(to right, #945AA9, #AA6287, #CC6F51, #FF8301);
-    height:6px;
+    height:0.375rem;
     width:99%;
     position:absolute;
     z-index: 0;
 }
 
 .state{
-    margin-left: 10px;
-    width:369px;
+    margin-left: 0.625rem;
+    width: 23.06rem;
     display:flex;
     justify-content: space-between;
     position:relative;
