--- a/static/css/book_update.css
+++ b/static/css/book_update.css
@@ -1,23 +1,23 @@
 .content {
-    width: 750px;
-    margin: 20px auto  50px;
+    width: 46rem;;
+    margin: 20px auto 50px;
 }
 
 h2 {
     font-family: Inter;
     font-style: normal;
     font-weight: 600;
-    font-size: 36px;
+    font-size: 2.25rem;
     color: #4A4A4A;
     margin-bottom: 30px;
 }
 
 h2>hr {
     margin-left: 0;
-    width: 40px;
-    height: 2.5px;
+    width:  2.5rem;
+    height: 0.125rem;
     background: #4A4A4A;
-    border-radius: 4px;
+    border-radius: 0.25rem;
 }
 
 .rows {
@@ -62,10 +62,10 @@ h2>hr {
 }
 */
 .text_input {
-    width: 369px;
-    height: 50px;
+    width: 23.06rem;
+    height: 3.125rem;
     background: #F2F2F2;
-    border-radius: 10px;
+    border-radius: 0.625rem;
     border: none;
 }
 
@@ -74,18 +74,15 @@ label {
     font-family: Inter;
     font-style: normal;
     font-weight: 600;
-    font-size: 22px;
+    font-size: 1.375rem;
     color: #5C5C5C;
 }
-
-
-
 .cr_major {
-    width: 369px;
-    height: 50px;
-    border: 1px solid #AFB0B9;
+    width: 23.06rem;
+    height: 3.125rem;
+    border: 0.0625rem solid #AFB0B9;
     box-sizing: border-box;
-    border-radius: 6px;
+    border-radius: 0.375rem;
 }
 
 .btns {
@@ -94,16 +91,16 @@ label {
 }
 
 .btn {
-    width: 250px;
-    height: 55px;
+    width: 15.63rem;
+    height: 3.438rem;
     background: #FB8F1D;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
+    border-radius: 0.9375rem;
     font-family: Inter;
     font-style: normal;
     font-weight: 600;
-    font-size: 24px;
-    line-height: 27px;
+    font-size: 1.5rem;
+    line-height: 1.688rem;
     text-align: center;
     margin: 0 10px;
     color: #FFFFFF;
@@ -127,8 +124,8 @@ label {
 }
 
 .book_text_input {
-    width: 590px;
-    height: 145px;
+    width: 36.88rem;
+    height: 9.063rem;
     border: none;
     background: #F2F2F2;
     border-radius: 10px;
@@ -156,8 +153,8 @@ form input::placeholder {
     font-family: Inter;
     font-style: normal;
     font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
+    font-size: 1.25rem;
+    line-height: 1.5rem;
     /* identical to box height */
     color: #9C9C9C;
 }
@@ -166,8 +163,8 @@ form input {
     font-family: Inter;
     font-style: normal;
     font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
+    font-size: 1.25rem;
+    line-height: 1.5rem;
     padding-left: 20px;
 }
 
@@ -179,7 +176,7 @@ form input {
     display: inline-block;
     position: relative;
     cursor: pointer;
-    font-size: 22px;
+    font-size:  1.375rem;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -187,7 +184,7 @@ form input {
     font-family: Inter;
     font-style: normal;
     font-weight: normal;
-    font-size: 16px;
+    font-size:  1rem;
     text-align: center;
     color: #7A7A7A;
 }
@@ -203,8 +200,8 @@ form input {
 .checkmark {
     display: block;
     background-color: white;
-    height: 40px;
-    width: 40px;
+    height: 2.5rem;
+    width: 2.5rem;
     border-radius: 50%;
     z-index: 10;
 }
@@ -255,7 +252,7 @@ form input {
 
 .state{
     margin-left: 10px;
-    width:369px;
+    width:23.06rem;
     display:flex;
     justify-content: space-between;
     position:relative;
@@ -273,7 +270,7 @@ form input {
     position: relative;
     padding-left: 35px;
     cursor: pointer;
-    font-size: 20px;
+    font-size: 1.25rem;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -296,8 +293,8 @@ form input {
     position: absolute;
     top: 0;
     left: 0;
-    height: 30px;
-    width: 30px;
+    height: 1.875rem;
+    width: 1.875rem;
     background-color:white;
     border: 2px solid #FF8C38;
     box-sizing: border-box;
@@ -326,8 +323,8 @@ form input {
   .free_btn .checkmark2:after {
     left: 8px;
     top: 2px;
-    width: 10px;
-    height: 20px;
+    width: 0.625rem;
+    height: 1.25rem;
     border: solid black;
     border-width: 0 3px 3px 0;
     -webkit-transform: rotate(45deg);
@@ -350,7 +347,7 @@ form textarea {
     font-family: Inter;
     font-style: normal;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 1.25rem;
     padding-top:12px;
     padding-left:20px;
 }
@@ -358,32 +355,39 @@ form textarea {
 .book_price_input {
     display: inline-block;
     border-radius:10px;
-    widows: 339px;
-}
+    widows: 21.19rem;
 
+}
+#id_price {
+    display: inline-block;
+    border-radius:10px 0 0 10px;
+    width:40%;
+    float:left;
+}
 #free_label {
     display: inline-block;
     font-family: Inter;
     font-style: normal;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 1.25rem;
 
     color: #FB8F1D;
 }
 
 .freebox {
-    width: 30px;
-    height: 30px;
+    width: 1.875rem;
+    height: 1.875rem;
     border: 2px solid #FF8C38;
     border-radius: 5px;
 }
+
 .white_content {
     display: none;
     position: absolute;
     top: 45%;
     left: 40%;
-    width: 299px;
-    height: 115px;
+    width: 20rem;
+    height: 7.188rem;
     padding: 16px;
     border: 0px solid black;
     box-shadow: 0px 0px 20px 2px rgba(0, 0, 0, 0.25);
@@ -394,7 +398,7 @@ form textarea {
 .state_box_txt{
     font-style: normal;
     font-weight: normal;
-    font-size: 12px;
+    font-size: 0.75rem;
 }
 .btn_state{
     position: absolute;
